Issue #5256 --add-modules
updates from review

Signed-off-by: Greg Wilkins <gregw@webtide.com>